[tool.poetry]
name = "demo-pizza-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Vaganov"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
gspread-asyncio = "^1.5.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

